@@ -41,6 +41,10 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     add_compile_options(-Wno-padded)
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     add_compile_options(-Werror -Wall -Wextra -Wformat=2 -Wshadow -Wcast-qual -Wwrite-strings -Wunreachable-code -Wpedantic -Wundef)
+    # these warnings produce false positives before GCC 10
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL "10.0.1")
+        add_compile_options(-Wconversion -Wsign-conversion)
+    endif()
 endif()
 
 if (USE_SANITIZERS)
@@ -65,7 +69,9 @@ add_library(common-static STATIC common.c)
 if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     target_include_directories(common-static PRIVATE SYSTEM ${CMAKE_BINARY_DIR}/include)
 endif()
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+    target_compile_options(common-static PRIVATE -Wno-sign-conversion)
+elseif (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     target_compile_options(common-static PRIVATE -Wno-sign-conversion)
 endif()
 target_include_directories(common-static SYSTEM PRIVATE ${ZLIB_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIR} ${Iconv_INCLUDE_DIR})
@@ -76,7 +82,7 @@ target_include_directories(config-static SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR} $
 add_executable(mame_regtest mame_regtest.c)
 target_include_directories(mame_regtest SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR} ${Iconv_INCLUDE_DIR})
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    target_compile_options(mame_regtest PRIVATE -Wno-format-truncation)
+    target_compile_options(mame_regtest PRIVATE -Wno-format-truncation -Wno-sign-conversion)
 endif()
 target_link_libraries(mame_regtest PRIVATE Threads::Threads common-static config-static ${LIBXML2_LIBRARIES} ${ZLIB_LIBRARIES})
 if (WIN32)
